# slate-dock

./: Cargo.toml
src/: bar.rs  main.rs  window.rs
